// Copyright 2024 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.state_in_different_proto;

option java_outer_classname = "UserApi";

message CreateUser {
  string user_id = 1 [(kalix.field).id = true];
  string name = 2;
}


message GetUser {
  string user_id = 1 [(kalix.field).id = true];
}

message CurrentUser {
  int32 value = 1;
}

service UserService {

  option (kalix.codegen) = {
    value_entity: {
      // entity is generated in package com.example.state_in_different_proto.domain
      name: ".domain.User"
      type_id: "user"
      // state is defined in package com.example.state_in_different_proto.state
      state: ".state.UserState"
    }
  };

  rpc Create (CreateUser) returns (google.protobuf.Empty);
  rpc GetCurrentUser (GetUser) returns (CurrentUser);
}
